🐛 Fix line shifting w/ all whitespace

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,12 @@
 @mixin whitespace {
   white-space: pre;
   font-family: var(--font-monospace);
-  line-height: inherit;
+  line-height: 1;
   color: var(--show-whitespace-color);
 }
 
 @mixin line-ending {
-  font-weight: var(--font-extralight);
-  font-family: var(--font-monospace);
-  line-height: inherit;
+  line-height: 1;
   width: 1.2ch;
   padding-left: 0.2ch;
   vertical-align: middle;
